Arreglar el error que impedia mostrar el mensaje 'gracias'

--- a/EJERCICIO_1 - copia/grecia.html
+++ b/EJERCICIO_1 - copia/grecia.html
@@ -33,7 +33,7 @@
                         
                         <input id="email" type="email" placeholder="Email Address"/>
                         <img class="error-icon" src="/EJERCICIO_1/images/icon-error.svg" alt="error">
-                        <button>
+                        <button type="submit">
                             <img src="/EJERCICIO_1/images/icon-arrow.svg" alt="arrow">
                         </button>
                         <small>Please provide a valid e-mail</small>
